[gd_scene load_steps=3 format=3 uid="uid://discard_pile"]

[ext_resource type="Script" path="res://scripts/discard_pile.gd" id="1_discard"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_discard"]
bg_color = Color(0.18, 0.12, 0.12, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.45, 0.3, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="DiscardPile" type="Panel"]
custom_minimum_size = Vector2(110, 150)
theme_override_styles/panel = SubResource("StyleBoxFlat_discard")
script = ExtResource("1_discard")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 4.0
offset_right = 40.0
offset_bottom = 24.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "DISCARD"
horizontal_alignment = 1

[node name="CountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -20.0
offset_right = 30.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "(0)"
horizontal_alignment = 1

[node name="EmptyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -10.0
offset_right = 35.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.4, 0.35, 0.35, 1)
text = "Empty"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DropIndicator" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.6, 0.4, 0.2, 0.6)

[node name="CardContainer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CardBackground" type="ColorRect" parent="CardContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.3, 0.3, 0.6, 1)

[node name="VBox" type="VBoxContainer" parent="CardContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="TierLabel" type="Label" parent="CardContainer/VBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "Tier I"
horizontal_alignment = 1

[node name="RankLabel" type="Label" parent="CardContainer/VBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "Rank 1"
horizontal_alignment = 1

[node name="OutputLabel" type="Label" parent="CardContainer/VBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "+1/s"
horizontal_alignment = 1
